2007-11-25  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/33152
	*gfortran.dg\blockdata_4.f90: New test.

2007-11-25  Tobias Burnus  <burnus@net-b.de>

	PR fortran/34079
	* gfortran.dg/bind_c_usage_10_c.c: Fix comment.
	* gfortran.dg/bind_c_usage_16.f03: New.
	* gfortran.dg/bind_c_usage_16_c.c: New.

2007-11-25  Eric Botcazou  <ebotcazou@adacore.com>

	* gnat.dg/specs/size_clause1.ads: New test.
	* gnat.dg/specs/size_clause2.ads: Likewise.
	* gnat.dg/specs/size_clause3.ads: Likewise.

2007-11-25  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/33499
	* gfortran.dg/entry_16.f90: New test.

2007-11-24  Tobias Burnus  <burnus@net-b.de>

	PR fortran/34192
	* gfortran.dg/nearest_2.f90: Add INF/NAN tests.

2007-11-24  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/33541
	* gfortran.dg/nested_modules_1.f90: Change the reference to
	FOO, forbidden by the standard, to a reference to W.
	* gfortran.dg/use_only_1.f90: New test.

2007-11-23  Tobias Burnus  <burnus@net-b.de>

	PR fortran/34209
	* gfortran.dg/nearest_3.f90: New test.

2007-11-23  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR fortran/33317
	* gfortran.dg/optional_dim_2.f90: New test.

2007-11-23  Tobias Burnus  <burnus@net-b.de>

	PR fortran/34187
	* gfortran.dg/bind_c_usage_15.f90: New.

2007-11-23  Tobias Burnus  <burnus@net-b.de>

	PR fortran/34192
	* gfortran.dg/nearest_2.f90: New.


2007-11-23  Jakub Jelinek  <jakub@redhat.com>

	PR c++/30293
	PR c++/30294
	* g++.dg/ext/java-2.C: New test.

2007-11-23  Mark Mitchell  <mark@codesourcery.com>
	    Manuel Lopez-Ibanez  <manu@gcc.gnu.org>
	
	PR c++/5310
	* g++.dg/warn/pr5310.C: New.
	* g++.dg/warn/pr33160.C: New.
	
2007-11-23  Richard Guenther  <rguenther@suse.de>
	Michael Matz  <matz@suse.de>

	PR tree-optimization/34176
	* gcc.c-torture/execute/pr34176.c: New testcase.

2007-11-23  Jakub Jelinek  <jakub@redhat.com>

	PR c++/34198
	* gcc.dg/Wconversion-5.c: New test.
	* g++.dg/Wconversion3.C: New test.

2007-11-23  Richard Guenther  <rguenther@suse.de>
