@@ -1,3 +1,8 @@
+2007-11-26  Richard Sandiford  <rsandifo@nildram.co.uk>
+
+	* lib/target-supports.exp (check_effective_target_mips_soft_float):
+	Return true for MIPS16 targets.
+
 2007-11-25  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
 
 	PR fortran/33152
